@@ -21,7 +21,8 @@
   image_src = ( uri ) >A %{ STORE("src"); } ;
   image_is = ( A2 C ". "? image_src :> title? ) ;
   image_link = ( ":" uri >A %{ STORE_URL("href"); } ) ;
-  image = ( "["? "!" image_is "!" %A image_link? "]"? ) >X ;
+  image = ( "!" image_is "!" %A image_link? ) >X ;
+  bracketed_image = ( "[!" image_is "!" %A image_link? "]" ) >X ;
 
   # footnotes
   footno = "[" >X %A digit+ %T "]" ;
@@ -98,6 +99,7 @@
   main := |*
     
     image { INLINE(block, "image"); };
+    bracketed_image { INLINE(block, "image"); };
     
     link { PARSE_LINK_ATTR("link_text"); PASS(block, "name", "link"); };
     bracketed_link { PARSE_LINK_ATTR("link_text"); PASS(block, "name", "link"); };
